*Empty MediaWiki Message*

--- a/Sadaam_Xuseen.mw
+++ b/Sadaam_Xuseen.mw
@@ -33,7 +33,7 @@
 
 1958-waxaa uu ka qeyb qaatay afgambigii leysku dayey in xukunka looga tuuro Abdulkarim Qasim, wuxuuna ka dhaawacmay lugta kadibna waxaa uu ufakaday Syria ka dibna Masarayuu sii galay.
 
-[[Febaraayo]]-25-[[1960]]-ayaa dil lagu xukumay asaga oo dalka dibada kaga maqan.
+[[Febraayo]]-25-[[1960]]-ayaa dil lagu xukumay asaga oo dalka dibada kaga maqan.
 
 [[1962]]-waxaa uu Masar ku dhameystay dugsiga sare.
 
@@ -57,7 +57,7 @@
 
 [[1988]]-Ciraaq ayada o kaalmo ka heleysa Ciidamada bada ee mareykanka ayey dib u qabsatay dhulkii Iraan kaga qabsatay intii dagaalka lagu guda jiray ee u dhaxeysay 1984-86.
 
-[[Julaayo]]-waxaa dhamaaday dagaalkii Iraan iyo Ciraaq.
+[[Luuliyo]]-waxaa dhamaaday dagaalkii Iraan iyo Ciraaq.
 
 [[Agoosto]]-2-1990-Ciraaq waxa ay qabsatay Kuwait.
 
