--- a/Sadaam_Xuseen.mw
+++ b/Sadaam_Xuseen.mw
@@ -67,5 +67,6 @@
 
 1998-Sadam waxaa uu eryay shaqaalihii qaramada midoobay.
 
-[[Oktoobar]]-15-[[2002]]-waxaa la qabtay doorashooyinkii madaxweynaha Sadam waxaa uu ahaa musharaxa kaliya ee u taagan madaxweynenimada wuxuuna ku guuleystay aqlabiyad dhan cod ah 100%.
---[[User:Yariiska|Yariiska]] 23:46, 18 Febraayo 2008 (UTC)
+[[Oktoobar]]-15-[[2002]]-waxaa la qabtay doorashooyinkii madaxweynaha Sadam waxaa uu ahaa musharaxa kaliya ee u taagan madaxweynenimada wuxuuna ku guuleystay aqlabiyad dhan cod ah.
+
+100%.--[[User:Yariiska|Yariiska]] 23:46, 18 Febraayo 2008 (UTC)
