*Empty MediaWiki Message*

--- a/Islaam.mw
+++ b/Islaam.mw
@@ -3,7 +3,7 @@
 [[Image:Kabaa.jpg|thumb|right|220px|Xajka oo kuyaalo sacuudi carabia waxuu ka mid yahay shanta tiir ee islaamka.]]
 == Diinta Islaamka ==
 
-'''Islaam''' ([[Luuqada Carabiga|Carabi]]: الإسلام;). Ku dhawaad muslimiinta caalamka oo dhan waxey yihiin  [[sunni]] iyo [[ Shiico]]
+'''Islam''' ([[Luuqada Carabiga|Arabic]]: {{Audio|ar-al_islam.ogg|الإسلام; ''al-'islām''}}). K u dhawaad muslimiinta caalamka oo dhan waxey yihiin  [[sunni]] [[ Shi'a]]
 
 
 Eebbe nasahnaa oo korreeye wuxuu yidhi:-" Waxaa ka cabsada Ilaahay addoomadiisa aqoonta leh, Ilaahayna waa adkaade dambidhaafe ah" Suuradda Faadir qayb ka mid ah aaayadda 28aad. 
@@ -23,87 +23,54 @@ Laga soo billaabo aabaheen nabi Aadan Naxariis iyo nabadgalyo eebbe korkiisa aha
 
 Barashada Diinta Islaamkuna waa waajib saaran qofka muslimka ah, taasoo noqonaysa waajib sharci ah. Diinta Islaamkuna waa tiirar ay ku taagan tahay iyo dhismaha tiirarkaasi hayaan, kaasoo koobaya hab nololeedka dhammaan dhinacyada nolosha ee dadka muslimiinta ah.Tiirarka diintuna waxay ka kooban yihiin laba tiir oo kala ah:-
 
-Tiirarka Islaamka 
+== Tiirarka Islaamka iyo Tiirarka Iimaanka ==
+ 
 
-iyo Tiirarka Iimaanka 
+=== Tiirarka Islaamku waxay ka kooban yihiin shan tiir oo kala ah: ===
 
- Tiirarka Islaamku waxay ka kooban yihiin shan tiir oo kala ah:-
+#Qiritaanka Ilaahay mooyee inaanu Ilaah kale jirin, Muxamedna Rasuulkii Ilaahay yahay. 
+#Oogista Salaadda 
+#Bixinta Sakada 
+#Soonka Bisha Ramadaan 
+#Tagitaanka Xajka qofkii kara 
 
-Qiritaanka Ilaahay mooyee inaanu Ilaah kale jirin, Muxamedna Rasuulkii Ilaahay yahay. 
+===Tiirarka Iimaankuna waxay ka kooban yihiin lix tiir oo kala ah: ===
 
-Oogista Salaadda 
-
-Bixinta Sakada 
-
-Soonka Bisha Ramadaan 
-
-Tagitaanka Xajka qofkii kara 
-
-Tiirarka Iimaankuna waxay ka kooban yihiin lix tiir oo kala ah:-
-
-Rumaynta Ilaahay 
-
-Rumaynta Malaa'igta 
-
-Rumaynta Kututbtii Ilaahay soo dejiyay 
-
-Rumaynta Rusushii Ilaahay soo diray 
-
-Rumaynta Maalinta Qiyaame 
-
-Rumaynta Qaddarka (Go'aaminta) Eebbe Khayrkiisa iyo Sharkiisaba 
+#Rumaynta Ilaahay
+#Rumaynta Malaa'igta 
+#Rumaynta Kututbtii Ilaahay soo dejiyay 
+#Rumaynta Rusushii Ilaahay soo diray 
+#Rumaynta Maalinta Qiyaame 
+#Rumaynta Qaddarka (Go'aaminta) Eebbe Khayrkiisa iyo Sharkiisaba 
 
 Rumaynta tiirarkaasina waa kuwo ka soo go'a qalbiga qofka muslinka ah fal qabashadiisuna ay rumayso, Eebbe nasahnaa oo korreeye loo gaar yeelo dartiina loo qabto. 
  
 Si aynu haddaba u fahamno aynu shanta tiir ee Islaamka iyo lixda tiir ee Iimaanka aynu mid mid u soo qaadno si aynu aqoonta sharciyeed ee waajibka ah aynu xilkeeda u gudanno si aynu raalli ahaanshaha Ilaahay u helno nolosha adduun iyo nolosha dambe ee aakhiroba.
  
 
---------------------------------------------------------------------------------
+== Tiirarka Islaamka ==
 
-                             Tiirarka Islaamka
-
-1. Qiritaanka in Ilaahay mooyee aanu Ilaah kale jirin, Muxamadna uu Rasuulkii Ilaahay yahay:- Waa albaabka uu qofku Islaamnimada kasoo galo, waana in qofku qalbiga ka rumeeyaa in Ilaahay mooyee aanu jirin Ilaah kale oo xaq lagu caabudaa carabkana uu ka yidhaahdo isaga oo odhanaya "اشهد ان لا اله الا الله و اشهد ان محمد رسول الله ""Ash-hadu Allaa Ilaaha Illallaahu Wa Ash-hadu Anna Muxamadun Rasuulu-Laah" Haddaba bal aynu hoos ugu degno waxa  uu Qiritaanku koobayo <<Sii Akhri>>
- 
-2. Salaadda:- Waa tiirka laf dhabarka u ah diinta Islaamka waana shan Salaadood oo uu addoonku tukanayo habeenkii iyo maalintii, waana fal ka kooban quraan akhrin,ducaysi,Ilaah waynayn iyo samayn dhaqdhaqaaqyo u gaar ah oo ay Salaaddu leedahay sida Rukuucda iyo Sujuudda.Ka tagisteeduna waxay shaki galinaysaa qofka Islaamnimadiisa, haddaba si aynu u barano waxa la innooga baahan yahay ansaxa Salaadda aynu hoos ugu daadagno casharadan      <<Sii Akhri>>  
- 
-3- Sakada:- Waa tiirka saddexaad,waxaana ay waajib ku tahay dadka hantida leh in ay in go'an oo ay diinta Islaamku u goysay ay Sako u bixiyaan si loo siiyo dadka ay ku baxdo, qofkii diidana dawladda ayaa xoog kaga qaadaysa si loo gaadhsiiya dadkii xaqa u lahaa, qofkii jiritaankeeda beeniyana diinta Islaamkaayuu kaga baxayaa. Haddaba si aynu hoos ugu daadagno oo aynu aqoon buuxda uga helno waxa la innooga baahan yahay  casharadan hoose   <<Sii Akhri>>
- 
- 
-
-4- Soonka:- Waa tiirka afraad,waana waajib saaran qof kasta oo muslin ah, waana wajib ah in qofku ka soomanaado cuntada, cabitaanka, iyo galmoodka laga bilaabo marka waagu dillaaco ilaa laga gaadhayo cadceedu marka ay dhacdo , qofkii jiritaankiisa beeniyana diinta Islaamka ayuu kaga baxayaa. Haddaba si aynu hoos ugu daadagno oo aynu aqoon buuxda uga helno waxa la innooga baahan yahay  casharadan hoose   <<Sii Akhri>>
-
-5- Xajka:- Waa tiirka shanaad,waxaana ay waajib ku tahay dadka kari kara ee hanti u haysta uu ku xajiyo,waana halmar inta uu nool yahay, isagoo addoonku tagaya Maka si uu u soo guto Xajka isla markaana booqanaya Madiina , qofkii jiritaankeeda beeniyana diinta Islaamka ayuu kaga baxayaa. Haddaba si aynu hoos ugu daadagno oo aynu aqoon buuxda uga helno waxa la innooga baahan yahay  casharadan hoose  <<Sii Akhri>>
-
-
---------------------------------------------------------------------------------
+# Qiritaanka in Ilaahay mooyee aanu Ilaah kale jirin, Muxamadna uu Rasuulkii Ilaahay yahay:- Waa albaabka uu qofku Islaamnimada kasoo galo, waana in qofku qalbiga ka rumeeyaa in Ilaahay mooyee aanu jirin Ilaah kale oo xaq lagu caabudaa carabkana uu ka yidhaahdo isaga oo odhanaya "اشهد ان لا اله الا الله و اشهد ان محمد رسول الله ""Ash-hadu Allaa Ilaaha Illallaahu Wa Ash-hadu Anna Muxamadun Rasuulu-Laah" Haddaba bal aynu hoos ugu degno waxa  uu Qiritaanku koobayo.
+# Salaadda:- Waa tiirka laf dhabarka u ah diinta Islaamka waana shan Salaadood oo uu addoonku tukanayo habeenkii iyo maalintii, waana fal ka kooban quraan akhrin,ducaysi,Ilaah waynayn iyo samayn dhaqdhaqaaqyo u gaar ah oo ay Salaaddu leedahay sida Rukuucda iyo Sujuudda.Ka tagisteeduna waxay shaki galinaysaa qofka Islaamnimadiisa, haddaba si aynu u barano waxa la innooga baahan yahay ansaxa Salaadda aynu hoos ugu daadagno casharadan.  
+# Sakada:- Waa tiirka saddexaad,waxaana ay waajib ku tahay dadka hantida leh in ay in go'an oo ay diinta Islaamku u goysay ay Sako u bixiyaan si loo siiyo dadka ay ku baxdo, qofkii diidana dawladda ayaa xoog kaga qaadaysa si loo gaadhsiiya dadkii xaqa u lahaa, qofkii jiritaankeeda beeniyana diinta Islaamkaayuu kaga baxayaa. 
+# Soonka:- Waa tiirka afraad,waana waajib saaran qof kasta oo muslin ah, waana wajib ah in qofku ka soomanaado cuntada, cabitaanka, iyo galmoodka laga bilaabo marka waagu dillaaco ilaa laga gaadhayo cadceedu marka ay dhacdo , qofkii jiritaankiisa beeniyana diinta Islaamka ayuu kaga baxayaa.
+# Xajka:- Waa tiirka shanaad,waxaana ay waajib ku tahay dadka kari kara ee hanti u haysta uu ku xajiyo,waana halmar inta uu nool yahay, isagoo addoonku tagaya Maka si uu u soo guto Xajka isla markaana booqanaya Madiina , qofkii jiritaankeeda beeniyana diinta Islaamka ayuu kaga baxayaa.
 
                           
-== TIIRARKA ISLAAMKA ==
+== TIIRARKA IIMAANKA ==
 
-
-1- Rumaynta Ilaahay nasahnaa oo korreeye:- oo ah in addoonku rumeeyo kalinimada Ilaahay, isla markaana uu qalbiga ka rumeeyo in Ilaahay mooyee aanu jirin Ilaah xaq lagu caabudaa, rumeeyana in Ilaahay nasahnaa oo korreeye uu abuuray adduunka iyo waxa ku gudo jiraba cir iyo dhulba,isaguna uu iska leeyahay wax kastoo uuman, Eebbana yahay ha arrin iyo taloo dhamiba ay gacantiisa ku jirto, cid la wadaagta maamulidda uunkanna aanay jirin.Haddaba bal aynu hoos ugu degno waxa  ay rumayntu koobayso 
-
-2-Rumaynta Malaa'igta:- oo ah in addoonku uu rumeeyo jiritaanka Malaa'igta oo ah addoomo Ilaahay ,amaradiisana ku shaqeeya wuxuu fara sameeya,waa addoomo Ilaahay ka abuuray nuur ,dadkuna aanay arki karin ciddii Ilaahay tuso mooyaane.Haddaba si aynu aqoon buuxda uga helno  
-
-3-Rumaynta Kutubta Ilaahay soo dejiyay:- Oo ah in addoonku uu rumeeyo kutubtii Ilaahay ku soo dejiyay Rusushii uu u soo dirayay addoomadiisa si ay u raacaan jidka toosan ee uu Ilaahay addoomadiisa kaga raalli ahaaday, jidkaas oo ah in Eebbe nasahnaa oo korreeye ay caabudaan, jidkaas oo ah ka ay dhammaan Rusushii Ilaahay naxariis iyo nabadgalyo Eebbe korkooda ahaataye ay ugu baaqayeen addoomadiisa. Si aynu haddaba aqoon guud uga helno kutubtii Eebbe nasahnaa oo korreeye uu soo dejiyay  
-
-4-Rumaynta Rusushii Ilaahay soo diray:-Oo ah inaynu rumaynu dhammaan Rusushii Ilaahay (naxariis iyo nabadgalyo Eebbe korkooda ahaataye) uu u soo diray addoomadiisa si ay u gaadhsiiyaan amarada iyo distuurka uu Ilaahay nasahnaa oo korreeye u dejiyay addoomadiisa inta ay adduunka sii joogaan si aanay u raacin jidka uu Shaydaan la doonayo inay raacaan si uu uga leexiyo jidkaas toosan ee uu Eebbe nasahnaa oo korreeye uu addoomadiisa raalli uga noqday. Si aynu haddaba u barano Rusushii Ilaahay inta Ilaahay nasahnaa oo korreeye uu inaga garansiiyo 
-
-5-Rumaynta Maalinta Qiyaame:- Oo ah in addoonku uu rumeeyo jiritaanka maalin dadka oo dhan lasoo bixin doono marka la wada dhinto, lana xisaabin doono, maalintaas oo noqon doonta maalin Ilaahay nasahnaa oo korreeye uu xisaabin doono addoomadiisa, qof kastana uu heli doono abaal marin wixii uu gaystay ah intii uu adduunyada joogay xumaan iyo samaanba, waana maalinta dadku ay taagan yihiin maxkamaddii uu Eebbe nasahnaa oo korreeye uu ku ballan qaaday inuu dadkoo dhan taagi doono maalintaas, maalintaas oo sida uu Eebbe nasahnaa oo korreeye Quraanka innoogu sheegay maalin ku adag ah dadka argagaxa wayn ee jira darteed, si aynu sawir guud uga qaadanno   
-
-6-Rumaynta Qadarka (U garashada Eebbe addoonkiisa u garto) sharkiisa iyo khayrkiisa:- Oo ah in addoonku rumeeyo wixii Eebbe nasahnaa oo korreeye uu qadaro inta nolosha adduunka la joogo, qadarkaas oo noqon kara mid khayr ah iyo mid dhib ah, iyadoo uu addoonku qalbigiisa ka rumaynayo in adduunkan hagistiisu ay Ilaahay nasahnaa oo korreeye gacantiisa ku jirto,wax aanu Ilaahay dooninna aanu adduunkan ka dhici karin wax uu doonay inuu ka dhacana cid horjoogsan kartaa aanay jirin , si aynu haddaba rumaynta qaddarka Eebbe wax uga ogaanno                               
+# Rumaynta Ilaahay nasahnaa oo korreeye:- oo ah in addoonku rumeeyo kalinimada Ilaahay, isla markaana uu qalbiga ka rumeeyo in Ilaahay mooyee aanu jirin Ilaah xaq lagu caabudaa, rumeeyana in Ilaahay nasahnaa oo korreeye uu abuuray adduunka iyo waxa ku gudo jiraba cir iyo dhulba,isaguna uu iska leeyahay wax kastoo uuman, Eebbana yahay ha arrin iyo taloo dhamiba ay gacantiisa ku jirto, cid la wadaagta maamulidda uunkanna aanay jirin.Haddaba bal aynu hoos ugu degno waxa  ay rumayntu koobayso 
+# Rumaynta Malaa'igta:- oo ah in addoonku uu rumeeyo jiritaanka Malaa'igta oo ah addoomo Ilaahay ,amaradiisana ku shaqeeya wuxuu fara sameeya,waa addoomo Ilaahay ka abuuray nuur ,dadkuna aanay arki karin ciddii Ilaahay tuso mooyaane.Haddaba si aynu aqoon buuxda uga helno  
+# Rumaynta Kutubta Ilaahay soo dejiyay:- Oo ah in addoonku uu rumeeyo kutubtii Ilaahay ku soo dejiyay Rusushii uu u soo dirayay addoomadiisa si ay u raacaan jidka toosan ee uu Ilaahay addoomadiisa kaga raalli ahaaday, jidkaas oo ah in Eebbe nasahnaa oo korreeye ay caabudaan, jidkaas oo ah ka ay dhammaan Rusushii Ilaahay naxariis iyo nabadgalyo Eebbe korkooda ahaataye ay ugu baaqayeen addoomadiisa. Si aynu haddaba aqoon guud uga helno kutubtii Eebbe nasahnaa oo korreeye uu soo dejiyay  
+# Rumaynta Rusushii Ilaahay soo diray:-Oo ah inaynu rumaynu dhammaan Rusushii Ilaahay (naxariis iyo nabadgalyo Eebbe korkooda ahaataye) uu u soo diray addoomadiisa si ay u gaadhsiiyaan amarada iyo distuurka uu Ilaahay nasahnaa oo korreeye u dejiyay addoomadiisa inta ay adduunka sii joogaan si aanay u raacin jidka uu Shaydaan la doonayo inay raacaan si uu uga leexiyo jidkaas toosan ee uu Eebbe nasahnaa oo korreeye uu addoomadiisa raalli uga noqday. Si aynu haddaba u barano Rusushii Ilaahay inta Ilaahay nasahnaa oo korreeye uu inaga garansiiyo 
+# Rumaynta Maalinta Qiyaame:- Oo ah in addoonku uu rumeeyo jiritaanka maalin dadka oo dhan lasoo bixin doono marka la wada dhinto, lana xisaabin doono, maalintaas oo noqon doonta maalin Ilaahay nasahnaa oo korreeye uu xisaabin doono addoomadiisa, qof kastana uu heli doono abaal marin wixii uu gaystay ah intii uu adduunyada joogay xumaan iyo samaanba, waana maalinta dadku ay taagan yihiin maxkamaddii uu Eebbe nasahnaa oo korreeye uu ku ballan qaaday inuu dadkoo dhan taagi doono maalintaas, maalintaas oo sida uu Eebbe nasahnaa oo korreeye Quraanka innoogu sheegay maalin ku adag ah dadka argagaxa wayn ee jira darteed, si aynu sawir guud uga qaadanno   
+# Rumaynta Qadarka (U garashada Eebbe addoonkiisa u garto) sharkiisa iyo khayrkiisa:- Oo ah in addoonku rumeeyo wixii Eebbe nasahnaa oo korreeye uu qadaro inta nolosha adduunka la joogo, qadarkaas oo noqon kara mid khayr ah iyo mid dhib ah, iyadoo uu addoonku qalbigiisa ka rumaynayo in adduunkan hagistiisu ay Ilaahay nasahnaa oo korreeye gacantiisa ku jirto,wax aanu Ilaahay dooninna aanu adduunkan ka dhici karin wax uu doonay inuu ka dhacana cid horjoogsan kartaa aanay jirin , si aynu haddaba rumaynta qaddarka Eebbe wax uga ogaanno                               
                     
 
 
 --------------------------------------------------------------------------------
 
 Labadaa tiir ee Islaamka iyo Iimaanka rumayntooda iyo ku dhaqankoodu  waxay addoonka u horseedaan badhaadhe adduun iyo mid aakhiraba, waxaana ay u jeexaan jid toosan oo addoonka ka dhigaya xubin noloshiisa oo dhami ay wanaag iyo khayr u tahay naftiisa iyo bulshadaba,waayo waxa uu dadka faraana waa khayr waxa uu ka reebaana waa halaag iyo burbur. Si aynu haddaba wanaagsanaantaas u falanqayno aynu isla gorfayna wanaagga ay diinta Islaamu farayso qofka muslinka, cutub walbana gaarkiisa hoos ka akhriso.
-
-
-
-
-
-
 
 = Siirada Rasuulka Mohamed SCW = 
 
