--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -7,18 +7,7 @@
  
 ==SADDEX-MIDNIMADA EEBBE==
 
-===Mahadcelin===
-Ugu horrayntii waxaan si khushuuc leh ugu mahadcelinayaa Eebbaha Qaaddirka ah ee anigoo baadi ah oo weli gudcur madow dhex fadhiya naxariistiisa awgeed ii muujiyay tubtiisa toosan oo xaqa ah. Waxaa kalee aan Eebbe uga mahadcelinayaa xikmadda iyo hibada uu i siiyay iyo jacaylka weyn ee uu ii qabo, iyo weliba is-beddelka uu noloshayda ku sameeyay tan iyo wixii ka dambeeyay maalintii uu qalbigayga taabtay oo uu hanuunka aan galladdiisa ku helay igu deeqay. 
-Runtii inta i garanaysa oo idilna ay maanta hab-dhaqankaygan cusub si muuqata u wada dareemeen. 
-Waxaan Eebbe uga sii mahadnaqayaa xoogga uu i siiyay oo aan ku diyaariyay buuggan yar oo sifaha Saddex-midnimadiisa sharraxaadda kooban ka bixinaya. Haddaba Intaasoo idil iyo in ka badanba mahaddeeda Isaga ayaa leh ee ma aha waxaan aqoontayda iyo dadaal aan aniga la imid ku keensaday.
-
-Marka xigana waxaan mahadcelin ballaaran halkan uga soo jeedinayaa walaalaha iga caawiyay xagga dhaqaalaha tan iyo maalintaan bilaabay hawsha qoraallada iyo weliba walaalaha kalee u guntaday bixinta kharashka lagu daabacay buugga, kuwaasoo dhammaantoodba kaalin weyn oo wax ku ool ah ka geystay hirgelinta qoraalkaan, waxaana shaki lahayn in iyaga la’aantood aanan runtii awoodi lahayn in aan diyaariyo qoraalkan isaga ah, taana waxay ku dhacday iyagoo waxay naftooda u baahnayd u huray inay ku bixiyaan dhismaha Boqortooyada Eebbe.
-
-Dhanka kalena waxaan halkan uga mahadcelinayaa dhammaan walaalaha kalee igu dhiirrigeliyay diyaarinta qorista buuggan oo aan filayo in uu wax weyn u tari doono kuwa gudcurka weli dhex fadhiya oo uu quluubtooda Sheydaanka gilgilayo oo ay ku adag tahay inay fahmaan waxa saddex-midnimada loola jeedo. 
-Waxaan si gaar ahaaneed mahadcelin halkan uga soo jeedinayaa walaalaha sida gaarka ah waqtiyadooda ugu huray meel marinta buuggan, hadday ahaan lahayd dhanka sixitaanka amaba tala-siinta la xiriirta qorista qoraalkan ka hadlaya saddex-midnimada.
-
-Gebagebadii waxaan mahadcelintayda ku soo gunaanadayaa, Eebbow waad ku mahadsan tahay dhammaan nimcooyinka aad igu mannaysatay iyo doorashada aad i dooratay anigoo dembiile ah. Ugu dambayntiina waxaan walaalaha kale oo dhan iyagana leeyahay, walaalayaal waad i dhiirrigeliseen waxaana idilkiinba idiin leeyahay waad ku mahadsan tihiin kaalintii ballaarnayd oo aad ka qaadateen meel marinta qoraalkan isaga ah. 
-Eebbe ha idiin barakadeeyo dhammaantiinba. Kolley anigu abaalkiinna ma gudi karayo balse waxaan Eebbe hortiisa ku ballanqaadayaa in aan mar walba idiin soo duceeyo. Isla markaana waxaan Eebbe idiin kaga baryayaa in uu idiinka dhigo kuwo had iyo jeerba Isaga daacad u ah oo si ay mukhlisnimo ku dheehan tahay ugu adeega Isaga iyo Boqortooyadiisaba. Aamiin
+Massiixiyad ama Kiris(h)taan waa diinka mid ah diimaha samaawiga ah sida Islaamka iyo Yuhuudiyada ee ku abtirsada nebi Ibraahim.
 
 ===Afeef===
 Maaddaama ay jiraan dadyow fara badan oo mawduucan ah saddex-midnimada Eebbe u arki karaya in uu yahay mid ilaahnimada Eebbe meel uga dhacaya, ayaan doonayaa in aan horay uga sii afeefto in aanay dadkaas ka caroonin waxyaabaha ku qoran buuggan. 
