--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -7,24 +7,9 @@
  
 Massiixiyad ama Kiris(h)taan waa diinka mid ah diimaha samaawiga ah sida Islaamka iyo Yuhuudiyada ee ku abtirsada nebi Ibraahim.
 
-===Afeef===
-Maaddaama ay jiraan dadyow fara badan oo mawduucan ah saddex-midnimada Eebbe u arki karaya in uu yahay mid ilaahnimada Eebbe meel uga dhacaya, ayaan doonayaa in aan horay uga sii afeefto in aanay dadkaas ka caroonin waxyaabaha ku qoran buuggan. 
-Sababta aan taa u leeyahayna ma aha in aan ka shakisanahay waxyaabaha aan soo qoray amaba aan uga dan leeyahay daandaansi aan iyaga ku daandaansanayo, balse dulucdayda waxay tahay dadka noocaas ah inayan xumaanta u deg-degin oo ay si wacan u dhuuxaan nuxurka uu qoraalkaan xambaarsan yahay. 
-
-Waayo wax kastoo nolosha aadanaha ku cusub waan garanayaa inayan si fudud uga daadagaynin maskaxdooda inay markiiba oggolaato. 
-
-Waxaanse jeclaan lahaa akhristaha buuggan in uusan markiiba cabbir xun iga qaadanin, balse uu si xikmad leh u akhristo sidii isagoo akhrisanaya sheeko xiiso leh oo weliba muhiim u ah noloshiisa uuna doonayo in uu ka salgaaro waxa uu gunaanadkeedu noqon doono. 
-
-Waxaa kaloo aan u sii sheegi lahaa akhristaha buuggan in uu ii garto in aan ahay nin marka hore waxa uu rumaysan yahay tusaale ka bixinaya, marka xigana si aan la qiyaasi karin ula jecel wanaag iyo badbaado ay la dersaan aakhiro iyo adduunba dhammaan dadka gaalnimada awgeed uga soo horjeeda jidka Eebbe oo xaqa ah. 
-
-Ujeeddadayduna ma aha in aan dadyow kale waxa ay rumaysan yihiin amaba diinta ay ku dhaqmayaan oo iyaga la qumman aan dhaawac iyo aflagaaddaba u geysto. 
-
-Halkanna waxaan si gaar ahaaneed afeef ugu soo qaddimayaa dadka ku abtirsada diinta Islaamka, maxaa yeelay waxay buuggan ku arkayaan aayado aan ka soo qaatay Kitaabka Qur’aanka ah oo ay iyagu rumaysan yihiin. 
-
-Sababta aan aayadahaas u soo qaatayna igama aha ku xadgudub aan ku xadgudbayo Qur’aanka, balse waxay iga tahay in aan u arkay inay wax weyn ka caawin karayaan dadka aan iyagu weli fursadda u helin inay akhristaan Kutubtii Tawreed, Sabuur iyo Injiil, isla mar ahaantaana aan wax dheeraad ah u fahamsiin lahaa si ay maskaxdooda dib ugu noqdaan ayna si dhab ah uga fekeraan macnaha runta ah oo la xiriira saddex-midnimada. Aayadahaasna waxaan hubaa inay dadkaas ka kaalmayn doonaan inay si bayaan ah u gartaan Saddex-midnimada iyo weliba kan uu yahay Sayid Ciise Masiix. 
-
-Ugu dambayntii waxaan doonayaa in aan dadkaas iyaga ah u caddeeyo in aan ahay nin aaminsan Eebbe keliya oo ah kan koonkan iyo waxa ku dhex jiraba abuuray, isla markaana ah mid aan wax dhalin lana dhalin oo aan bilow iyo dhammaad toona lahayn. 
-Sidaa awgeed aniga oo qirsan in uu Eebbe yahay mid xumo oo dhan ka hufan, ayaan haddana jecelahay in aan ka sii afeefto in uu akhristaha buuggan ii qaadanin nin aan macnaha Ilaahnimada wax ka garanaynin oo Eebbaha Qaaddirka ah si bareer ah gef ugu geysanaaya jiritaankiisa.
+SADDEX-MIDNIMO
+Saddex-midnimo (trinity) waa mid ka mid ah aragtiyada laga helo diinta masiixiga. Waxay odhanaysaa Ilaa waa mid qudha oo saddex shakhsiyadood leh.
+Saddexdaasi waxa ay kala yihiin: Ilaaha Aabbaha ah, Inanka (Ciise), iyo Ruuxa Qudduuska ah.
 
 ===Hordhac===
 Qof kasta oo maanta dunida jooga waxaa dhab ah in uu ogsoon yahay in uu garaadka aadanahu yahay mid xaddidan oo aan awoodi karin in uu wax walba xaqiiqadooda ku soo saaro fahamkiisa. 
