--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -12,6 +12,7 @@ Saddex-midnimo (trinity) waa mid ka mid ah aragtiyada laga helo diinta masiixiga
 Saddexdaasi waxa ay kala yihiin: Ilaaha Aabbaha ah, Inanka (Ciise), iyo Ruuxa Qudduuska ah.
 
 ===Hordhac===
+===Hordhac===
 Qof kasta oo maanta dunida jooga waxaa dhab ah in uu ogsoon yahay in uu garaadka aadanahu yahay mid xaddidan oo aan awoodi karin in uu wax walba xaqiiqadooda ku soo saaro fahamkiisa. 
 Iyadoo ay taas jirto haddana waxaynu aragnaa in beni’aadamka oo kaashanaya aqoontiisa sare uu waxyaaba fara badan oo la yaab leh ku sameeyay dunida guudkeeda taasoo ka tarjumaysa tayada garaadkiisa. 
 
@@ -52,7 +53,7 @@ Taana waxaa ka maragfuraya marka ay timaaddo dood-wadaagis caqiido salka ku hays
 Mana dhacdo inay inta badan qofka u sawiranto inay culimada, waalidiinta, walaalaha ama saaxiibbaduba yihiin kuwo beni’aadam ah oo sidii wax loogu soo sheegay uun wax u rumaystay, kuwaasoo aan weliba wax dabagal ah ku samaynin waxa ay rumaysan yihiin. 
 
 Qofkuna aad bay u yar tahay in uu shakhsi ahaantiisa isku taxalujiyo in amuurta jirta uu isaga iskiis u raadiyo isagoo Eebbe la kaashanaya si uu xaqiiqada dhabta ah ee jirta wax uga ogaado. 
-Dadka badankiisana cilladda taa ka hor taagan waxay tahay in uu qofkuba xusuusnayn mas’uuliyadda ka saaran nafsaddiisa oo maalinta xisaabtana uu Eebbe qof kastaba tiisa mooyaane aanu tu kale wax ka weydiin doonin. 
+Dadka badankiisana cilladda taa ka hor taagan waxay tahay in uu qofkuba xusuusnayn mas’uuliyadda ka saaran nafsaddiisa oo maalinta xisaabtana uu Eebbe qof kastaba tiisa mooyaane aanu tu kale wax ka weydiin doonin.
 
 ===Jidka Xaqa ah waa mid keliya===
 Si kastaba ha ahaato e, ma jirto cid maanta moogis u qabta inay jiraan diimo fara badan oo ay dadka kala duwan ee dunida guudkeeda saaran ku kala dhaqmaan. Su’aashuse waxay tahay miyay diimahaas dhammaantood yihiin kuwo xaqa ku wada taagan oo uu Eebbe raalli ka wada yahay? Jawaabtu waa maya. Waana midaan dhici karaynin taas. Maxaa yeelay Eebbe ma aha mid qorsheeyay inay dadkiisa habab kala duwan Isaga ku kala caabudaan. 
