--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -14,6 +14,9 @@ Saddexdaasi waxa ay kala yihiin: Ilaaha Aabbaha ah, Inanka (Ciise), iyo Ruuxa Qu
 Diintan waxa udubdhexaad u ah Ciise Masiix (Christos) iyo Baybalka.
 Baybalku guud ahaan waxa uu ka kooban yahay laba qaybood oo kala ah: Axdigii Hore (Tawraad) iyo Axdiga Cusub (Injiil).
 
+Masiixiyiintu way ku kala duwan yihiin ahmiyadda ay siiyaan axdigii hore.
+Buugagga uu ka kooban yahay Axdiga Cusub waxa qoray Paulos (Paul) iyo niman kale Ciise ka dib.
+
 ===Hordhac===
 Qof kasta oo maanta dunida jooga waxaa dhab ah in uu ogsoon yahay in uu garaadka aadanahu yahay mid xaddidan oo aan awoodi karin in uu wax walba xaqiiqadooda ku soo saaro fahamkiisa. 
 Iyadoo ay taas jirto haddana waxaynu aragnaa in beni’aadamka oo kaashanaya aqoontiisa sare uu waxyaaba fara badan oo la yaab leh ku sameeyay dunida guudkeeda taasoo ka tarjumaysa tayada garaadkiisa. 
