--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -7,15 +7,16 @@
  
 Massiixiyad ama Kiris(h)taan waa diinka mid ah diimaha samaawiga ah sida Islaamka iyo Yuhuudiyada ee ku abtirsada nebi Ibraahim.
 
-SADDEX-MIDNIMO
-Saddex-midnimo (trinity) waa mid ka mid ah aragtiyada laga helo diinta masiixiga. Waxay odhanaysaa Ilaa waa mid qudha oo saddex shakhsiyadood leh.
-Saddexdaasi waxa ay kala yihiin: Ilaaha Aabbaha ah, Inanka (Ciise), iyo Ruuxa Qudduuska ah.
-
 Diintan waxa udubdhexaad u ah Ciise Masiix (Christos) iyo Baybalka.
 Baybalku guud ahaan waxa uu ka kooban yahay laba qaybood oo kala ah: Axdigii Hore (Tawraad) iyo Axdiga Cusub (Injiil).
 
 Masiixiyiintu way ku kala duwan yihiin ahmiyadda ay siiyaan axdigii hore.
 Buugagga uu ka kooban yahay Axdiga Cusub waxa qoray Paulos (Paul) iyo niman kale Ciise ka dib.
+
+
+===SADDEX-MIDNIMO===
+Saddex-midnimo (trinity) waa mid ka mid ah aragtiyada laga helo diinta masiixiga. Waxay odhanaysaa Ilaa waa mid qudha oo saddex shakhsiyadood leh.
+Saddexdaasi waxa ay kala yihiin: Ilaaha Aabbaha ah, Inanka (Ciise), iyo Ruuxa Qudduuska ah.
 
 ===Hordhac===
 Qof kasta oo maanta dunida jooga waxaa dhab ah in uu ogsoon yahay in uu garaadka aadanahu yahay mid xaddidan oo aan awoodi karin in uu wax walba xaqiiqadooda ku soo saaro fahamkiisa. 
