*Empty MediaWiki Message*

--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -14,10 +14,6 @@ Masiixiyiintu way ku kala duwan yihiin ahmiyadda ay siiyaan axdigii hore.
 Buugagga uu ka kooban yahay Axdiga Cusub waxa qoray Paulos (Paul) iyo niman kale Ciise ka dib.
 
 
-===SADDEX-MIDNIMO===
-Saddex-midnimo (trinity) waa mid ka mid ah aragtiyada laga helo diinta masiixiga. Waxay odhanaysaa Ilaa waa mid qudha oo saddex shakhsiyadood leh.
-Saddexdaasi waxa ay kala yihiin: Ilaaha Aabbaha ah, Inanka (Ciise), iyo Ruuxa Qudduuska ah.
-
 ===Hordhac===
 Qof kasta oo maanta dunida jooga waxaa dhab ah in uu ogsoon yahay in uu garaadka aadanahu yahay mid xaddidan oo aan awoodi karin in uu wax walba xaqiiqadooda ku soo saaro fahamkiisa. 
 Iyadoo ay taas jirto haddana waxaynu aragnaa in beni’aadamka oo kaashanaya aqoontiisa sare uu waxyaaba fara badan oo la yaab leh ku sameeyay dunida guudkeeda taasoo ka tarjumaysa tayada garaadkiisa. 
@@ -104,6 +100,10 @@ Maxaa yeelay arrin kasta oo uu qofku si gaar ah u danaynayo waa hubaal in uusan 
 
 Wax uu qof aadane ah ku hawshoodana waxaa runtii ugu weyn raadinta jidka xaqa ah ee Eebbe. Mana jiraan waddooyin fara badan oo Eebbe xaggiisa loo sii marayo, laakinse jidka xaqa ah waa mid keliya kaas oo ah kan uu Eebbe u dooray dadkiisa inay ugu tagaan. 
 
+
+===SADDEX-MIDNIMO===
+Saddex-midnimo (trinity) waa mid ka mid ah aragtiyada laga helo diinta masiixiga. Waxay odhanaysaa Ilaah waa mid qudha oo saddex shakhsiyadood leh.
+Saddexdaasi waxa ay kala yihiin: Ilaaha Aabbaha ah, Ilaaha Inanka ah (Ciise), iyo Ilaaha Ruuxa Qudduuska ah.
 ===Maxay tahay Saddex-midnimada Eebbe?===
 Bal immikana aynu isla eegno sharraxaad kooban oo ka hadlaysa waxa loola jeedo saddex-midnimada Eebbe. 
 
