*Empty MediaWiki Message*

--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -3,7 +3,7 @@
 [[Diinta]] Masiixiyadda : [[Ciise]], [[Sayid Ciise Masiix]].
 (مسيحية)
 
-[[Masiixiyad]]
+===[[Masiixiyad]]===
  
 Massiixiyad ama Kiris(h)taan waa diinka mid ah diimaha samaawiga ah sida Islaamka iyo Yuhuudiyada ee ku abtirsada nebi Ibraahim.
 
