--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -5,14 +5,16 @@
 
 ===[[Masiixiyad]]===
  
-Massiixiyad ama Kiris(h)taan waa diinka mid ah diimaha samaawiga ah sida Islaamka iyo Yuhuudiyada ee ku abtirsada nebi Ibraahim.
+Massiixiyad ama Kiris(h)taan waa diin ka mid ah saddexda diimood ee samaawiga ah. Labada kale waa Islaamka iyo Yuhuudiyada. Saddexdooduba nebi Ibraahim ayay ku abtirsadaan.
 
-Diintan waxa udubdhexaad u ah Ciise Masiix (Christos) iyo Baybalka.
+Diintan waxa udubdhexaad u ah Ciise Masiix (Christos) ,Baybalka, iyo taariikhda/dhaqanka kaniisadda.
+
 Baybalku guud ahaan waxa uu ka kooban yahay laba qaybood oo kala ah: Axdigii Hore (Tawraad) iyo Axdiga Cusub (Injiil).
 
 Masiixiyiintu way ku kala duwan yihiin ahmiyadda ay siiyaan axdigii hore.
 Buugagga uu ka kooban yahay Axdiga Cusub waxa qoray Paulos (Paul) iyo niman kale Ciise ka dib.
-
+Mahdabadaha ugu waaweyn masiixiyaddu waa saddex: Kaatoolik, Protestaan, iyo Ortodoks.
+Labada hore waxa loo yaqaan Kaniisadaha Reer Galbeedka, ta dambana Kaniisadda Reer Bariga.
 
 ===Hordhac===
 Qof kasta oo maanta dunida jooga waxaa dhab ah in uu ogsoon yahay in uu garaadka aadanahu yahay mid xaddidan oo aan awoodi karin in uu wax walba xaqiiqadooda ku soo saaro fahamkiisa. 
