--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -5,13 +5,14 @@
 
 ===[[Masiixiyad]]===
  
-Massiixiyad ama Kiris(h)taan waa diin ka mid ah saddexda diimood ee samaawiga ah. Labada kale waa Islaamka iyo Yuhuudiyada. Saddexdooduba nebi Ibraahim ayay ku abtirsadaan.
+Masiixiyad ama Kiris(h)taan waa diin ka mid ah saddexda diimood ee samaawiga ah. Labada kale waa Islaamka iyo Yuhuudiyada. Saddexdooduba nebi Ibraahim ayay ku abtirsadaan.
 
 Diintan waxa udubdhexaad u ah Ciise Masiix (Christos) ,Baybalka, iyo taariikhda/dhaqanka kaniisadda.
 
 Baybalku guud ahaan waxa uu ka kooban yahay laba qaybood oo kala ah: Axdigii Hore (Tawraad) iyo Axdiga Cusub (Injiil).
 
 Masiixiyiintu way ku kala duwan yihiin ahmiyadda ay siiyaan axdigii hore.
+Dadka qaar ayaa waxa ay ku doodaan in aanu Ciise diin cusub la iman ee uu dib-u-habayn (reformation) iyo fududayn uun sameeyay.
 Buugagga uu ka kooban yahay Axdiga Cusub waxa qoray Paulos (Paul) iyo niman kale Ciise ka dib.
 
 Mahdabadaha ugu waaweyn masiixiyaddu waa saddex: Kaatoolik, Protestaan, iyo Ortodoks.
