--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -19,6 +19,34 @@ Buugagga uu ka kooban yahay Axdiga Cusub waxa qoray Paulos (Paul) iyo niman kale
 Mahdabadaha ugu waaweyn masiixiyaddu waa saddex: Kaatoolik, Protestaan, iyo Ortodoks.
 Labada hore waxa loo yaqaan Kaniisadaha Reer Galbeedka, ta dambana Kaniisadda Reer Bariga.
 
+===Mahadcelin===
+Ugu horrayntii waxaan si khushuuc leh ugu mahadcelinayaa Eebbaha Qaaddirka ah ee anigoo baadi ah oo weli gudcur madow dhex fadhiya naxariistiisa awgeed ii muujiyay tubtiisa toosan oo xaqa ah. Waxaa kalee aan Eebbe uga mahadcelinayaa xikmadda iyo hibada uu i siiyay iyo jacaylka weyn ee uu ii qabo, iyo weliba is-beddelka uu noloshayda ku sameeyay tan iyo wixii ka dambeeyay maalintii uu qalbigayga taabtay oo uu hanuunka aan galladdiisa ku helay igu deeqay. Runtii inta i garanaysa oo idilna ay maanta hab-dhaqankaygan cusub si muuqata u wada dareemeen. Waxaan Eebbe uga sii mahadnaqayaa xoogga uu i siiyay oo aan ku diyaariyay buuggan yar oo sifaha Saddex-midnimadiisa sharraxaadda kooban ka bixinaya. Haddaba Intaasoo idil iyo in ka badanba mahaddeeda Isaga ayaa leh ee ma aha waxaan aqoontayda iyo dadaal aan aniga la imid ku keensaday.
+
+Marka xigana waxaan mahadcelin ballaaran halkan uga soo jeedinayaa walaalaha iga caawiyay xagga dhaqaalaha tan iyo maalintaan bilaabay hawsha qoraallada iyo weliba walaalaha kalee u guntaday bixinta kharashka lagu daabacay buugga, kuwaasoo dhammaantoodba kaalin weyn oo wax ku ool ah ka geystay hirgelinta qoraalkaan, waxaana shaki lahayn in iyaga la’aantood aanan runtii awoodi lahayn in aan diyaariyo qoraalkan isaga ah, taana waxay ku dhacday iyagoo waxay naftooda u baahnayd u huray inay ku bixiyaan dhismaha Boqortooyada Eebbe.
+
+Dhanka kalena waxaan halkan uga mahadcelinayaa dhammaan walaalaha kalee igu dhiirrigeliyay diyaarinta qorista buuggan oo aan filayo in uu wax weyn u tari doono kuwa gudcurka weli dhex fadhiya oo uu quluubtooda Sheydaanka gilgilayo oo ay ku adag tahay inay fahmaan waxa saddex-midnimada loola jeedo. Waxaan si gaar ahaaneed mahadcelin halkan uga soo jeedinayaa walaalaha sida gaarka ah waqtiyadooda ugu huray meel marinta buuggan, hadday ahaan lahayd dhanka sixitaanka amaba tala-siinta la xiriirta qorista qoraalkan ka hadlaya saddex-midnimada.
+
+Gebagebadii waxaan mahadcelintayda ku soo gunaanadayaa, Eebbow waad ku mahadsan tahay dhammaan nimcooyinka aad igu mannaysatay iyo doorashada aad i dooratay anigoo dembiile ah. Ugu dambayntiina waxaan walaalaha kale oo dhan iyagana leeyahay, walaalayaal waad i dhiirrigeliseen waxaana idilkiinba idiin leeyahay waad ku mahadsan tihiin kaalintii ballaarnayd oo aad ka qaadateen meel marinta qoraalkan isaga ah. Eebbe ha idiin barakadeeyo dhammaantiinba. Kolley anigu abaalkiinna ma gudi karayo balse waxaan Eebbe hortiisa ku ballanqaadayaa in aan mar walba idiin soo duceeyo. Isla markaana waxaan Eebbe idiin kaga baryayaa in uu idiinka dhigo kuwo had iyo jeerba Isaga daacad u ah oo si ay mukhlisnimo ku dheehan tahay ugu adeega Isaga iyo Boqortooyadiisaba. Aamiin
+
+
+Afeef
+Maaddaama ay jiraan dadyow fara badan oo mawduucan ah saddex-midnimada Eebbe u arki karaya in uu yahay mid ilaahnimada Eebbe meel uga dhacaya, ayaan doonayaa in aan horay uga sii afeefto in aanay dadkaas ka caroonin waxyaabaha ku qoran buuggan. Sababta aan taa u leeyahayna ma aha in aan ka shakisanahay waxyaabaha aan soo qoray amaba aan uga dan leeyahay daandaansi aan iyaga ku daandaansanayo, balse dulucdayda waxay tahay dadka noocaas ah inayan xumaanta u deg-degin oo ay si wacan u dhuuxaan nuxurka uu qoraalkaan xambaarsan yahay.
+
+Waayo wax kastoo nolosha aadanaha ku cusub waan garanayaa inayan si fudud uga daadagaynin maskaxdooda inay markiiba oggolaato.
+
+Waxaanse jeclaan lahaa akhristaha buuggan in uusan markiiba cabbir xun iga qaadanin, balse uu si xikmad leh u akhristo sidii isagoo akhrisanaya sheeko xiiso leh oo weliba muhiim u ah noloshiisa uuna doonayo in uu ka salgaaro waxa uu gunaanadkeedu noqon doono.
+
+Waxaa kaloo aan u sii sheegi lahaa akhristaha buuggan in uu ii garto in aan ahay nin marka hore waxa uu rumaysan yahay tusaale ka bixinaya, marka xigana si aan la qiyaasi karin ula jecel wanaag iyo badbaado ay la dersaan aakhiro iyo adduunba dhammaan dadka gaalnimada awgeed uga soo horjeeda jidka Eebbe oo xaqa ah.
+
+Ujeeddadayduna ma aha in aan dadyow kale waxa ay rumaysan yihiin amaba diinta ay ku dhaqmayaan oo iyaga la qumman aan dhaawac iyo aflagaaddaba u geysto.
+
+Halkanna waxaan si gaar ahaaneed afeef ugu soo qaddimayaa dadka ku abtirsada diinta Islaamka, maxaa yeelay waxay buuggan ku arkayaan aayado aan ka soo qaatay Kitaabka Qur’aanka ah oo ay iyagu rumaysan yihiin.
+
+Sababta aan aayadahaas u soo qaatayna igama aha ku xadgudub aan ku xadgudbayo Qur’aanka, balse waxay iga tahay in aan u arkay inay wax weyn ka caawin karayaan dadka aan iyagu weli fursadda u helin inay akhristaan Kutubtii Tawreed, Sabuur iyo Injiil, isla mar ahaantaana aan wax dheeraad ah u fahamsiin lahaa si ay maskaxdooda dib ugu noqdaan ayna si dhab ah uga fekeraan macnaha runta ah oo la xiriira saddex-midnimada. Aayadahaasna waxaan hubaa inay dadkaas ka kaalmayn doonaan inay si bayaan ah u gartaan Saddex-midnimada iyo weliba kan uu yahay Sayid Ciise Masiix.
+
+Ugu dambayntii waxaan doonayaa in aan dadkaas iyaga ah u caddeeyo in aan ahay nin aaminsan Eebbe keliya oo ah kan koonkan iyo waxa ku dhex jiraba abuuray, isla markaana ah mid aan wax dhalin lana dhalin oo aan bilow iyo dhammaad toona lahayn. Sidaa awgeed aniga oo qirsan in uu Eebbe yahay mid xumo oo dhan ka hufan, ayaan haddana jecelahay in aan ka sii afeefto in uu akhristaha buuggan ii qaadanin nin aan macnaha Ilaahnimada wax ka garanaynin oo Eebbaha Qaaddirka ah si bareer ah gef ugu geysanaaya jiritaankiisa.
+
+
 ===Hordhac===
 Qof kasta oo maanta dunida jooga waxaa dhab ah in uu ogsoon yahay in uu garaadka aadanahu yahay mid xaddidan oo aan awoodi karin in uu wax walba xaqiiqadooda ku soo saaro fahamkiisa. 
 Iyadoo ay taas jirto haddana waxaynu aragnaa in beni’aadamka oo kaashanaya aqoontiisa sare uu waxyaaba fara badan oo la yaab leh ku sameeyay dunida guudkeeda taasoo ka tarjumaysa tayada garaadkiisa. 
