*Empty MediaWiki Message*

--- a/Suugaan.mw
+++ b/Suugaan.mw
@@ -1,3 +1,5 @@
+[[Image:litrature.png|thumb|300px|right|suugaan]]
+
 Abwaan Hadraawi Oo Ka Qayb-Galay Bandhig Murtiyeed
 Loo Qabtay Ardayda Dugsiga Sare Ee Faarax Oomar [http://www.aftahan.com Aftahan]
 
