/* Lien externe / External link */

--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -38,9 +38,7 @@ Saddexdaasi waxa ay kala yihiin: Ilaaha Aabbaha ah, Ilaaha Inanka ah (Ciise), iy
 
 
 
-==''Lien externe / External link''==
-
-*[http://www.worldscriptures.org/pages/somali.html Biblia]
+==''External links''==
 
 [[Category:Diin]]
 
