*Empty MediaWiki Message*

--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -1,4 +1,4 @@
-[[Diinta]] Masiixiyadda : [[Ciise]], [[Sayid Ciise Masiix]].
+[[Diinta]] Masiixiyadda : [[masiixi]], [[Ciise Masiix]].
 (مسيحية)
 
 ===[[Masiixiyad]]===
