*Empty MediaWiki Message*

--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -1,9 +1,9 @@
-[[Diinta]] Masiixiyadda : [[masiixi]], [[Ciise Masiix]].
+[[Diin]] Masiixiyadda : [[masiixi]], [[Ciise Masiix]].
 (مسيحية)
 
-===[[Masiixiyad]]===
+===Masiixiyad===
  
-Masiixiyad ama Kiris(h)taan waa diin ka mid ah saddexda diimood ee samaawiga ah. Labada kale waa Islaamka iyo Yuhuudiyada. Saddexdooduba nebi Ibraahim ayay ku abtirsadaan.
+[[Masiixiyad]] ama Kiris(h)taan waa diin ka mid ah saddexda diimood ee samaawiga ah. Labada kale waa Islaamka iyo Yuhuudiyada. Saddexdooduba nebi Ibraahim ayay ku abtirsadaan.
 
 Diintan waxa udubdhexaad u ah Ciise Masiix (Christos) ,Baybalka, iyo taariikhda/dhaqanka kaniisadda.
 
