--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -1,9 +1,6 @@
-[[Diin]] Masiixiyadda : [[masiixi]], [[Ciise Masiix]].
-(مسيحية)
-
 ===Masiixiyad===
  
-[[Masiixiyad]] ama Kiris(h)taan waa diin ka mid ah saddexda diimood ee samaawiga ah. Labada kale waa Islaamka iyo Yuhuudiyada. Saddexdooduba nebi Ibraahim ayay ku abtirsadaan.
+[[Masiixiyad]] (carabi مسيحية) ama Kiris(h)taan waa [[Diin]] ka mid ah saddexda diimood ee samaawiga ah. Labada kale waa [[Islaam]] iyo [[Yuhuudiyah]]. Saddexdooduba nebi Ibraahim ayay ku abtirsadaan.
 
 Diintan waxa udubdhexaad u ah Ciise Masiix (Christos) ,Baybalka, iyo taariikhda/dhaqanka kaniisadda.
 
