--- a/Aaminaad.mw
+++ b/Aaminaad.mw
@@ -1,1 +1,1 @@
-Diin rumaysad awood sare iyo hannaan akhaaq, ku dhaqan, iyo qaddarin oo la xidhiidha rumaysadkaas.
+Diin rumaysad awood sare iyo hannaan akhaaq, ku dhaqan, iyo qaddarin oo la xiriira rumaysadkaas.
