--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -2,7 +2,7 @@
  
 [[Masiixiyad]] (carabi مسيحية) ama Kiris(h)taan waa [[Diin]] ka mid ah saddexda diimood ee samaawiga ah. Labada kale waa [[Islaam]] iyo [[Yuhuudiyah]]. Saddexdooduba nebi Ibraahim ayay ku abtirsadaan.
 
-Diintan waxa udubdhexaad u ah Ciise Masiix (Christos) ,Baybalka, iyo taariikhda/dhaqanka kaniisadda.
+Diintan waxa udubdhexaad u ah [[Ciise Masiix]] (Christos), [[Baybalka]], iyo taariikhda/dhaqanka kaniisadda.
 
 Baybalku guud ahaan waxa uu ka kooban yahay laba qaybood oo kala ah: Axdigii Hore (Tawraad) iyo Axdiga Cusub (Injiil). Weliba waxaa si gaar ah Injiil loogu sheegaa mid kasta oo ka mid ah afarta buug ee ugu horreeya Axdiga Cusub.
 
@@ -13,12 +13,6 @@ Buugagga uu ka kooban yahay Axdiga Cusub waxa qoray Paulos (Paul) iyo niman kale
 
 Mahdabadaha ugu waaweyn masiixiyaddu waa saddex: Kaatoolik, Protestaan, iyo Ortodoks.
 Labada hore waxa loo yaqaan Kaniisadaha Reer Galbeedka, ta dambana Kaniisadda Reer Bariga.
-
-
-
-
-
-
 
 ===SADDEX-MIDNIMO===
 Saddex-midnimo (trinity) waa mid ka mid ah aragtiyada laga helo diinta masiixiga. Waxay odhanaysaa Ilaah waa mid qudha oo saddex shakhsiyadood leh.
