*Empty MediaWiki Message*

--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -4,7 +4,7 @@
 
 Diintan waxa udubdhexaad u ah [[Ciise Masiix]] (Christos), [[Baybalka]], iyo taariikhda/dhaqanka kaniisadda.
 
-Baybalku guud ahaan waxa uu ka kooban yahay laba qaybood oo kala ah: Axdigii Hore (Tawraad) iyo Axdiga Cusub (Injiil). Weliba waxaa si gaar ah Injiil loogu sheegaa mid kasta oo ka mid ah afarta buug ee ugu horreeya Axdiga Cusub.
+Baybalku guud ahaan waxa uu ka kooban yahay laba qaybood oo kala ah: [[Axdigii Hore]] (Tawraad) iyo [[Axdiga Cusub]] (Injiil). Weliba waxaa si gaar ah [[Injiil]] loogu sheegaa mid kasta oo ka mid ah afarta buug ee ugu horreeya Axdiga Cusub.
 
 Masiixiyiintu way ku kala duwan yihiin ahmiyadda ay siiyaan axdigii hore.
 Dadka qaar ayaa waxa ay ku doodaan in aanu Ciise diin cusub la iman ee uu dib-u-habayn (reformation) iyo fududayn uun sameeyay.
