--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -6,7 +6,7 @@
 |image_coat               = Coat of arms of Somalia.png
 |image_map                = LocationSomalia.png
 |national_motto           = 
-|national_anthem          = {{lang|so|''Soomaaliyeey Toosoow''}}
+|national_anthem          = {{lang|so|''[[Astaanta Calanka Soomaaliya |Soomaaliyeey Toosoow]]''}}
 |official_languages       = [[Af Soomaali|Af Soomaali]]<sup>1</sup>
 |government_type          = [[Transitional Federal Government of the Somali Republic|Transitional Federal Government]]
 |leader_title1            = [[President of Somalia|Madaxwayne]]
