--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -11,7 +11,7 @@ Dadka qaar ayaa waxa ay ku doodaan in aanu Ciise diin cusub la iman ee uu dib-u-
 
 Buugagga uu ka kooban yahay Axdiga Cusub waxa qoray Paulos (Paul) iyo niman kale Ciise ka dib.
 
-Mahdabadaha ugu waaweyn masiixiyaddu waa saddex: Kaatoolik, Protestaan, iyo Ortodoks.
+Mahdabadaha ugu waaweyn masiixiyaddu waa saddex: [[Kaatoolik]], [[Protestaan]], iyo [[Ortodoks]].
 Labada hore waxa loo yaqaan Kaniisadaha Reer Galbeedka, ta dambana Kaniisadda Reer Bariga.
 
 ===SADDEX-MIDNIMO===
