*Empty MediaWiki Message*

--- a/Masiixiyad.mw
+++ b/Masiixiyad.mw
@@ -1,1 +1,172 @@
-Massiixiyad ama Kiris(h)taan waa diinka mid ah diimaha samaawiga ah sida Islaamka iyo Yuhuudiyada ee ku abtirsada nebi Ibraahim.
+===Masiixiyad===
+ 
+[[Masiixiyad]] (carabi مسيحية) ama Kiris(h)taan waa [[Diin]] ka mid ah saddexda diimood ee samaawiga ah. Labada kale waa [[Islaam]] iyo [[Yuhuudiyah]]. Saddexdooduba nebi Ibraahim ayay ku abtirsadaan.
+
+Diintan waxa udubdhexaad u ah [[Ciise Masiix]] (Christos), [[Baybalka]], iyo taariikhda/dhaqanka kaniisadda.
+
+Baybalku guud ahaan waxa uu ka kooban yahay laba qaybood oo kala ah: [[Axdigii Hore]] (Tawraad) iyo [[Axdiga Cusub]] (Injiil). Weliba waxaa si gaar ah [[Injiil]] loogu sheegaa mid kasta oo ka mid ah afarta buug ee ugu horreeya Axdiga Cusub.
+
+Masiixiyiintu way ku kala duwan yihiin ahmiyadda ay siiyaan axdigii hore.
+Dadka qaar ayaa waxa ay ku doodaan in aanu Ciise diin cusub la iman ee uu dib-u-habayn (reformation) iyo fududayn uun sameeyay.
+
+Buugagga uu ka kooban yahay Axdiga Cusub waxa qoray Paulos (Paul) iyo niman kale Ciise ka dib.
+
+Mahdabadaha ugu waaweyn masiixiyaddu waa saddex: [[Kaatoolik]], [[Protestaan]], iyo [[Ortodoks]].
+Labada hore waxa loo yaqaan Kaniisadaha Reer Galbeedka, ta dambana Kaniisadda Reer Bariga.
+
+===SADDEX-MIDNIMO===
+Saddex-midnimo (trinity) waa mid ka mid ah aragtiyada laga helo diinta masiixiga. Waxay odhanaysaa Ilaah waa mid qudha oo saddex shakhsiyadood leh.
+Saddexdaasi waxa ay kala yihiin: Ilaaha Aabbaha ah, Ilaaha Inanka ah (Ciise), iyo Ilaaha Ruuxa Qudduuska ah.
+
+
+
+
+
+
+
+
+
+
+
+
+==''External links''==
+
+[[Category:Diin]]
+
+[[af:Christendom]]
+[[als:Christentum]]
+[[an:Cristianismo]]
+[[ang:Crīstendōm]]
+[[ar:مسيحية]]
+[[arc:ܟܪܣܛܝܢܘܬܐ]]
+[[ast:Cristianismu]]
+[[az:Xristianlıq]]
+[[ba:Христианлыҡ]]
+[[bar:Kristndum]]
+[[bat-smg:Krėkštiuonībė]]
+[[be-x-old:Хрысьціянства]]
+[[bg:Християнство]]
+[[bn:খ্রিস্ট ধর্ম]]
+[[br:Kristeniezh]]
+[[bs:Hrišćanstvo]]
+[[ca:Cristianisme]]
+[[cbk-zam:Cristianismo]]
+[[cdo:Gĭ-dók-gáu]]
+[[ceb:Kristiyanismo]]
+[[co:Cristianisimu]]
+[[cs:Křesťanství]]
+[[cu:Хрїстїаньство]]
+[[cv:Христианлăх]]
+[[cy:Cristnogaeth]]
+[[da:Kristendom]]
+[[de:Christentum]]
+[[diq:İsewitine]]
+[[dv:މަސީހީދީން]]
+[[el:Χριστιανισμός]]
+[[en:Christianity]]
+[[eo:Kristanismo]]
+[[es:Cristianismo]]
+[[et:Kristlus]]
+[[eu:Kristautasun]]
+[[fa:مسیحیت]]
+[[fi:Kristinusko]]
+[[fo:Kristindómur]]
+[[fr:Christianisme]]
+[[frp:Cristianismo]]
+[[fur:Cristianesim]]
+[[fy:Kristendom]]
+[[ga:Críostaíocht]]
+[[gl:Cristianismo]]
+[[ha:Kiristancìì]]
+[[hak:Kî-tuk-kau]]
+[[he:נצרות]]
+[[hi:ईसाई धर्म]]
+[[hr:Kršćanstvo]]
+[[hsb:Křesćanstwo]]
+[[ht:Krisyanis]]
+[[hu:Kereszténység]]
+[[hy:Քրիստոնեություն]]
+[[ia:Christianismo]]
+[[id:Kekristenan]]
+[[ig:Christianity]]
+[[ilo:Cristianidad]]
+[[io:Kristanismo]]
+[[is:Kristni]]
+[[it:Cristianesimo]]
+[[ja:キリスト教]]
+[[jbo:xi'ojda]]
+[[jv:Kristen]]
+[[ka:ქრისტიანობა]]
+[[kab:Tamasiḥit]]
+[[kg:Kiyesu]]
+[[kk:Мәсіхшілік]]
+[[kn:ಕ್ರೈಸ್ತ ಧರ್ಮ]]
+[[ko:기독교]]
+[[ku:Xirîstiyanî]]
+[[kw:Kristoneth]]
+[[la:Religio Christiana]]
+[[lb:Chrëschtentum]]
+[[li:Christendóm]]
+[[lij:Crestianeximo]]
+[[ln:Boklísto]]
+[[lt:Krikščionybė]]
+[[lv:Kristietība]]
+[[mi:Whakapono Karaitiana]]
+[[mk:Христијанство]]
+[[ml:ക്രിസ്തുമതം]]
+[[mr:ख्रिश्चन धर्म]]
+[[ms:Kristian]]
+[[mt:Kristjaneżmu]]
+[[my:ခရစ္‌ယာန္‌ဘာသာ]]
+[[mzn:Messiavar / مسیحا وار]]
+[[nds:Christendom]]
+[[nds-nl:Christendom]]
+[[nl:Christendom]]
+[[nn:Kristendommen]]
+[[no:Kristendom]]
+[[nrm:Chrêtchienneté]]
+[[oc:Cristianisme]]
+[[os:Чырыстон дин]]
+[[pa:ਈਸਾਈ ਦੀਨ]]
+[[pih:Kreschenitii]]
+[[pl:Chrześcijaństwo]]
+[[pms:Cristianésim]]
+[[ps:عيسويت]]
+[[pt:Cristianismo]]
+[[qu:Kristiyanu iñiy]]
+[[ro:Creştinism]]
+[[roa-rup:Crishinizmo]]
+[[ru:Христианство]]
+[[rw:Kristendomu]]
+[[scn:Cristianèsimu]]
+[[sco:Christianity]]
+[[sh:Hrišćanstvo]]
+[[si:කිතු දහම]]
+[[simple:Christianity]]
+[[sk:Kresťanstvo]]
+[[sl:Krščanstvo]]
+[[sq:Krishterimi]]
+[[sr:Хришћанство]]
+[[sv:Kristendom]]
+[[sw:Ukristo]]
+[[ta:கிறிஸ்தவம்]]
+[[tg:Дини Насронӣ]]
+[[th:คริสต์ศาสนา]]
+[[tl:Kristiyanismo]]
+[[tpi:Kristen]]
+[[tr:Hıristiyanlık]]
+[[tt:Xristianlıq]]
+[[uk:Християнство]]
+[[ur:عیسائیت]]
+[[uz:Masihiylik]]
+[[vec:Cristianèximo]]
+[[vi:Kitô giáo]]
+[[vls:Christndom]]
+[[wa:Crustinnisse]]
+[[yi:קריסטנטום]]
+[[yo:Kirisẹ́ńdọ̀mù]]
+[[zh:基督教]]
+[[zh-classical:基督教]]
+[[zh-min-nan:Ki-tok-kàu]]
+[[zh-yue:基督敎]]
+[[zu:Ubukrestu]]
