*Empty MediaWiki Message*

--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -33,7 +33,7 @@
 |GDP_PPP                  = $55.023 billion <!--CIA-->
 |GDP_PPP_rank             = <small>160th</small>
 |GDP_PPP_per_capita       = $600
-|GDP_PPP_per_capita_rank  = <small>not ranked</small>
+|GDP_PPP_cala_qof_rank  = <small>not ranked</small>
 |HDI_year                 = 2003
 |HDI                      = n/a
 |HDI_rank                 = unranked
@@ -43,13 +43,13 @@
 |established_event1       = Tariikhdii
 |established_date1        = [[Luuliyo 1]] [[1960]]
 |cctld                    = [[.so]]
-|calling_code             = 252
-|time_zone                = [[East Africa Time|EAT]]
+|furaha_debeda             = 252
+|wakhti                = [[East Africa Time|EAT]]
 |utc_offset               = +3
 |time_zone_DST            = not observed
 |utc_offset_DST           = +3
-|currency                 = [[Shilin Soomaali]]
-|currency_code            = SOS
+|lacagta                 = [[Shilin Soomaali]]
+|mag._lacagta            = SOS
 |footnote1                = [https://www.cia.gov/cia/publications/factbook/geos/so.html#People CIA Factbook]
 |footnote2                = [http://news.bbc.co.uk/2/hi/africa/country_profiles/1072592.stm BBC News country profile]
 }}
