*Empty MediaWiki Message*

--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -5,8 +5,8 @@
 |image_flag               = Flag of Somalia.svg
 |image_coat               = Coat of arms of Somalia.png
 |image_map                = LocationSomalia.png
-|national_motto           = 
-|national_anthem          = {{lang|so|''[[Astaanta Calanka Soomaaliya |Soomaaliyeey Toosoow]]''}}
+|national_motto           = Hal luugad, Hal Dad, Hal Diin ''<br/>(One Language, One people, One Religion)''
+|national_anthem          = {{lang|so|[[Astaanta Calanka Soomaaliya |Soomaaliyeey Toosoow]]}}
 |official_languages       = [[Af Soomaali|Af Soomaali]]<sup>1</sup>
 |government_type          = [[Transitional Federal Government of the Somali Republic|Transitional Federal Government]]
 |leader_title1            = [[President of Somalia|Madaxwayne]]
