--- a/Masiixiyad.mw
+++ b/Masiixiyad.mw
@@ -1,6 +1,6 @@
 ===Masiixiyad===
  
-[[Masiixiyad]] (carabi مسيحية) ama Kiris(h)taan waa [[Diin]] ka mid ah saddexda diimood ee samaawiga ah. Labada kale waa [[Islaam]] iyo [[Yuhuudiyah]]. Saddexdooduba nebi Ibraahim ayay ku abtirsadaan.
+[[Masiixiyad]] (carabi مسيحية) [[Kiristaan]] ama [[Kirishtaan]] waa [[Diin]] ka mid ah saddexda diimood ee samaawiga ah. Labada kale waa [[Islaam]] iyo [[Yuhuudiyah]]. Saddexdooduba nebi Ibraahim ayay ku abtirsadaan.
 
 Diintan waxa udubdhexaad u ah [[Ciise Masiix]] (Christos), [[Baybalka]], iyo taariikhda/dhaqanka kaniisadda.
 
