--- a/Soomaaliland.mw
+++ b/Soomaaliland.mw
@@ -7,7 +7,7 @@ Sanadkii [[1991]] ayey Somaliland ku dhawaaqday inay ka go'day dalka [[Soomaaliy
 
 Somaliland waxaa ka jira [[Xisbi|Xisbiyo]] Siyaasadeed oo madax bannaan, sida [[Kulmiye]], [[UDUB]], [[UCID]] iyo [[Qaran]].
 
-
+[[Image:Somaliland COA.gif]]
 
 == Madaxweyneyaashii Somaliland: ==
 *1. [[Cabdiraxman Axmed Cali Tuur]] : [[1991]] - [[1993]]
