*Empty MediaWiki Message*

--- a/Astaanta_Calanka_Soomaaliya.mw
+++ b/Astaanta_Calanka_Soomaaliya.mw
@@ -11,7 +11,7 @@
 
 |}
 
-'''Erayadii Astaanta Calanka Soomaaliya'''
+'''Erayadii Astaanta Calanka [[Soomaaliya]]'''
 
 QEYBTA 1
  
@@ -59,3 +59,5 @@ Quruun teeda hanan weydaa
 Tiqo kuma leh dunideenee,
 Adduunyada ka tamin qaadtoo
 Assaagiina tiigsada eey.
+
+[[Category:Soomaaliya]]
