--- a/Ciise.mw
+++ b/Ciise.mw
@@ -5,6 +5,12 @@ Ciise calayhi asalaam waxa uu ahaa nabi eebe u dirsaday reer banii israaiil oo h
 '''Ciise''' (Iesus) : ° -7/-4 ; + 30/+33 : Sayid Ciise Masiix : [[Diinta]] [[Kiristaanka]].
 (يسوع)
 
+Ciise Masiix waxa uu ku dhashay Baytulaxam oo ku taal dhaulka ay Falastiiniyiintu degaan dhowr sano ka hor bilowgii taariikhda miilaadiga.
+
+Muslimiinta iyo Masiixintu waxa ay isku raacsan yihiin in dhalashadiisu mucjisa ahayd oo hooyadiis Maryam ay isaga uuraysatay iyadoo bikra (cadrad) ah.
+
+Ciise markii uu soddon jirsaday ayuu bilaabay fidinta diinta, saddex sano ka dibna samada ayuu u kacay.
+
 {{commonscat|Jesus Christ|Ciise}}
 
 *[http://www.worldscriptures.org/pages/somali.html Biblia]
